crates/kul-core/tests/corpus/valid/02-version-decl/02-version-decl.kul
person alice name:"Alice Sharma" gender:female
person bob   name:"Bob Sharma"   gender:male
